<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings_ru">Настройки</string>
    <string name="media_library_ru">Медиатека</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="end_user_license_agreement">Пользовательское соглашение</string>
    <string name="contact_with_support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="dark_theme">Темная тема</string>
    <string name="home_page">Стартовая страница</string>
    <string name="search_page">Страница поиска</string>
    <string name="mediaLib_page">Страница медиатеки</string>

    <string name="supportMessage">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="supportMail">my-mail@ya.ru</string>
    <string name="mailSubject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_development_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="search">Поиск</string>

    <string name="track_pic">Обложка</string>
    <string name="more">Подробности</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear">Очистить историю поиска</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_history_question">Очистить историю?</string>
    <string name="history_was_deleted">История очищена</string>
    <string name="back">Назад</string>




    <string name="the_beatles">The Beatles</string>
    <string name="no_reply">No Reply</string>
    <string name="play">Воспроизвести</string>
    <string name="yesterday_remastered_2009">Yesterday (Remastered 2009)</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>

    <string name="_00_30">00:30</string>
    <string name="_00_00">00:00</string>
    <string name="_5_35">5:35</string>

    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="album_pic">Обложка альбома</string>
    <string name="rock">Rock</string>
    <string name="_1965">1965</string>
    <string name="great_britain">Великобритания</string>
    <string name="pause">Пауза</string>

    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="medialibrary_empty">Ваша медиатека пуста</string>

    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="support_send_error">Не найдено подходящего приложения</string>

    <string name="not_found_app">Не найдено подходящих приложений</string>

    <string name="error">Ошибка %d</string>

    <string name="playlist_name">Best songs</string>
    <string name="playlist_track_counter">98 треков</string>
    <string name="add_image">Добавить картинку</string>


    <string name="playlist_name_hint">Название *</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>


    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="playlist_image">Обложка плейлиста</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист «%1$s»</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_question">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_deleted">Плейлист удалён</string>
    <string name="playlist_is_empty_for_share">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_is_empty">В этом плейлисте нет треков</string>
    <string name="dot">Dot</string>

    <plurals name="plural_count_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>



</resources>