<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.Settings"
    tools:context=".settings.ui.SettingsFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_16"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings_ru"
            android:textColor="@color/search_title"
            android:textSize="@dimen/text_22sp"
             />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:fontFamily="@font/ys_display_regular"
        android:paddingVertical="@dimen/margin_21"
        android:text="@string/dark_theme"
        android:textColor="@color/track_name"
        android:textSize="@dimen/text_16sp"
        />


    <LinearLayout
        android:id="@+id/Share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsButtonText"
            android:text="@string/share_this_app" />

        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsButtonText"
            android:text="@string/contact_with_support" />

        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsButtonText"
            android:text="@string/end_user_license_agreement" />

        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/menu" />
    </LinearLayout>


</LinearLayout>