<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="?attr/colorSecondary"
            android:stateListAnimator="@null"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorOnSecondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings_ru"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/main_page_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsPageTxtStyle"
            android:text="@string/dark_theme" />

        <Switch
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:checked="false"

            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsPageTxtStyle"
            android:text="@string/share_this_app" />


        <Button
            style="@style/SettingsPageButtonStyle"
            app:icon="@drawable/share" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsPageTxtStyle"
            android:text="@string/contact_with_support" />


        <Button
            style="@style/SettingsPageButtonStyle"
            app:icon="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsPageTxtStyle"
            android:text="@string/end_user_license_agreement" />


        <Button
            style="@style/SettingsPageButtonStyle"
            app:icon="@drawable/menu" />
    </LinearLayout>


</LinearLayout>