<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.Search"
    tools:context=".search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Home2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/back"
            app:tint="@color/search_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textColor="@color/search_title"
            android:textSize="@dimen/text_size_22"
            app:fontWeight="500" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/SearchForm"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/search_text_hint"
            android:drawableStart="@drawable/small_search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/search_hint"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="255"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:textColor="@color/dirty_black"
            android:textColorHint="@color/search_hint"
            android:textCursorDrawable="@drawable/color_cursor"
            app:fontWeight="400" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center|end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="invisible"
            app:tint="@color/search_hint" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_search" />

        <TextView
            android:id="@+id/placeholderNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/nothing_was_found"
            android:textAlignment="center"
            android:textColor="@color/search_title"
            android:textSize="19sp"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/not_found"
            app:fontWeight="400"
            app:iconTint="@color/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/connection_problem"
                android:src="@drawable/internet_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/connection_problem"
                android:textAlignment="center"
                android:textColor="@color/search_title"
                android:textSize="@dimen/text_19sp"
                app:fontFamily="@font/ys_display_medium"
                app:fontWeight="400"
                app:iconTint="@color/track_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/check_internet_connection"
                android:textAlignment="center"
                android:textColor="@color/search_title"
                android:textSize="19sp"
                app:fontFamily="@font/ys_display_medium"
                app:fontWeight="400"
                app:iconTint="@color/track_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/errorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/search_title"
                android:padding="15dp"
                android:text="@string/refresh"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/search_error_button"
                android:textSize="14sp"
                app:cornerRadius="54dp"
                app:fontFamily="@font/ys_display_medium"
                app:fontWeight="500"
                app:iconTint="@color/track_name" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>